# Pi-Wall

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: piwall.yml  rules.yml
deploy/: install-pi.sh  piwall.service
piwall/: __init__.py  ai_advisor.py  capture.py  cli.py  config.py  dashboard.py  detector.py  engine.py  firewall.py  flows.py
tests/: test_core.py
